Updating to go 1.18 (#1292)
* Updating to go 1.18

* updating changelog, CI, and test dockerfile.

* go mod tidy on /acceptance

* go mod tidy on /cli

* go mod tidy on /control-plane

* go mod tidy on /hack/aws-acceptance-test-cleanup

* go mod tidy on /hack/helm-reference-gen

* updating golangci-lint-action to 3.2.0

* fixing golang version on charts/consul/test/docker/Test.dockerfile

* updating .go-version to v1.18.3

* updating go testsum version to 1.8.1

* updating lint-control-plane to go install lint-consul-retry rather than go get lint-consul-retry. consul repo does this.

* Updating changelog so that changes are listed under improvements rather than breaking changes.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ env:
   TEST_RESULTS: /tmp/test-results # path to where test results are saved
   CONSUL_VERSION: 1.13.0-alpha1 # Consul's OSS version to use in tests
   CONSUL_ENT_VERSION: 1.13.0-alpha1+ent # Consul's enterprise version to use in tests
-  GOTESTSUM_VERSION: 1.6.4 # You cannot use environment variables with workflows. The gotestsum version is hardcoded in the reusable workflows too.
+  GOTESTSUM_VERSION: 1.8.1 # You cannot use environment variables with workflows. The gotestsum version is hardcoded in the reusable workflows too.
 
 jobs:
   get-go-version:
@@ -97,7 +97,7 @@ jobs:
         with:
           go-version: ${{ needs.get-go-version.outputs.go-version }}
 
-      - run: go get -u github.com/hashicorp/lint-consul-retry && lint-consul-retry
+      - run: go install github.com/hashicorp/lint-consul-retry@master && lint-consul-retry
 
       - name: Run lint
         working-directory: control-plane
