Skip peering tests on AKS and update AKS version (#1355)
* On AKS, we cannot run peering tests yet because the pod network is not flat
* Add a flag to acceptance tests framework to disable peering tests (to be removed once non-flat networks are supported)
* Update AKS version to the supported 1.21.x version (1.21.7 is no longer supported)
* Run AKS nightly acceptance tests with -disable-peering flag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -701,7 +701,7 @@ jobs:
       - run: mkdir -p $TEST_RESULTS
 
       - run-acceptance-tests:
-          additional-flags: -kubeconfig="$primary_kubeconfig" -secondary-kubeconfig="$secondary_kubeconfig"
+          additional-flags: -kubeconfig="$primary_kubeconfig" -secondary-kubeconfig="$secondary_kubeconfig" -disable-peering
 
       - store_test_results:
           path: /tmp/test-results
