Read created secrets from the API object (#1359)
* Read created secrets from the API object
- Avoid reading objects from the cache immediately after creating them
  as they are not guaranteed to exist. This leads to a bug caused by the
race condition.
- Add update RBAC to the secrets for the connect inject controller.
* Update acceptance/tests/peering/peering_connect_test.go

Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -52,6 +52,7 @@ rules:
   - "list"
   - "watch"
   - "create"
+  - "update"
   - "delete"
 - apiGroups: ["consul.hashicorp.com"]
   resources: ["peeringacceptors"]
