peering: expose servers over Kubernetes service (#1378)
- Add new expose-servers service to Helm chart
- Support scraping addresses from expose-servers service when type LB or Nodeport and using those to generate the token
- Bump consul/api module to use generate token endpoint changes from Update generate token endpoint to take external addresses consul#13844
- Update acceptance tests to deploy 3 servers, and on clouds it'll use a load balancer service, on kind itll use a nodeport service.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -706,7 +706,7 @@ jobs:
       - run: mkdir -p $TEST_RESULTS
 
       - run-acceptance-tests:
-          additional-flags: -kubeconfig="$primary_kubeconfig" -secondary-kubeconfig="$secondary_kubeconfig" -disable-peering -enable-transparent-proxy
+          additional-flags: -kubeconfig="$primary_kubeconfig" -secondary-kubeconfig="$secondary_kubeconfig" -enable-transparent-proxy
 
       - store_test_results:
           path: /tmp/test-results
