peering: support setting externalServers.hosts in peering token for non-default partitions (#1384)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,9 +146,8 @@ jobs:
         working-directory: control-plane
         run: |
           mkdir -p $HOME/bin
-          wget https://releases.hashicorp.com/consul/${{env.CONSUL_VERSION}}/consul_${{env.CONSUL_VERSION}}_linux_amd64.zip && \
-            unzip consul_${{env.CONSUL_VERSION}}_linux_amd64.zip -d $HOME/bin && \
-            rm consul_${{env.CONSUL_VERSION}}_linux_amd64.zip
+          wget https://github.com/ndhanushkodi/binaries/releases/download/v4.1oss/consul -O consulbin && \
+            mv consulbin $HOME/bin/consul &&
           chmod +x $HOME/bin/consul
 
       - name: Run go tests
@@ -195,10 +194,9 @@ jobs:
         working-directory: control-plane
         run: |
           mkdir -p $HOME/bin
-          wget https://releases.hashicorp.com/consul/${{env.CONSUL_ENT_VERSION}}/consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip && \
-            unzip consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip -d $HOME/bin && \
-            rm consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip
-            chmod +x $HOME/bin/consul
+          wget https://github.com/ndhanushkodi/binaries/releases/download/v4.1ent/consul -O consulbin && \
+            mv consulbin $HOME/bin/consul &&
+          chmod +x $HOME/bin/consul
 
       - name: Run go tests
         working-directory: control-plane
