--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -143,6 +143,13 @@ spec:
                 {{- if (eq .Values.global.peering.tokenGeneration.serverAddresses.source "") }}
                 {{- if (and $serverEnabled $serverExposeServiceEnabled) }}
                 -read-server-expose-service=true \
+                {{- else }}
+                {{- if .Values.externalServers.enabled }}
+                {{- $port := .Values.externalServers.grpcPort }}
+                {{- range $h := .Values.externalServers.hosts }}
+                -server-address="{{ $h }}:{{ $port }}" \
+                {{- end }}
+                {{- end }}
                 {{- end }}
                 {{- end }}
                 {{- end }}
