Rename flag for peering token server addresses. (#1426)
- The flag was initially named `server-address` but the `server-address` flag has been used across the project to imply ONLY the address of the external server when enabled. This meaning is overloaded in the context of the server address used for generating the peering token. This leads to errors (specifically in the agentless context), where the deployment must explicitly know the list of external servers.

--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -148,14 +148,14 @@ spec:
                 {{- if .Values.externalServers.enabled }}
                 {{- $port := .Values.externalServers.grpcPort }}
                 {{- range $h := .Values.externalServers.hosts }}
-                -server-address="{{ $h }}:{{ $port }}" \
+                -token-server-address="{{ $h }}:{{ $port }}" \
                 {{- end }}
                 {{- end }}
                 {{- end }}
                 {{- end }}
                 {{- if (eq .Values.global.peering.tokenGeneration.serverAddresses.source "static") }}
                 {{- range $addr := .Values.global.peering.tokenGeneration.serverAddresses.static }}
-                -server-address="{{ $addr }}" \
+                -token-server-address="{{ $addr }}" \
                 {{- end }}
                 {{- end }}
                 {{- end }}
